<resources>
    <string name="app_name">ProxiGraviLock</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Proximity sensor screen off and rotation</string>



    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_vibrate_off">Vibrate when screen dims</string>
    <string name="pref_title_vibrate_on">Vibrate when phone wake ups</string>
    <string name="pref_head_down">Lock if oriented head-down</string>
    <string name="pref_face_down">Lock if oriented face-down</string>
    <string name="perf_proximity_rotate">Enable screen rotation</string>
    <string name="pref_proximity_lock">Use proximity sensor for lock</string>
    <string name="pref_motion_wakeup">Wake ups when phone taken</string>
    <string name="notifiction_text">Dim screen using proximity sensor</string>
    <string name="pref_start_on_boot">Start on boot</string>
    <string name="service_start">Start service now</string>
    <string name="in_poket">when device is in pocket</string>
    <string name="pref_su">use ROOT method for screen dim</string>

</resources>
